--- a/git.html
+++ b/git.html
@@ -6,14 +6,14 @@
 
   <title>Git commands</title>
   <meta name="description" content="Git commands">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <meta name="author" content="A. Hoque">
 
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
-  <code>A piece of computer code</code>
+  <strong>Git rebase master</strong>
+  <code>git checkout master</code>
+  <code>git fetch master</code>
+  <code>git rebase</code>
 </body>
 </html>
